example-03/overlays/prod/patch-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app 
spec:
  replicas: 5
