example-03/overlays/prod/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: test-app
  name: test-app
spec:
  host: "test.ocp-prod.j2ctechnologies.com"
  port:
    targetPort: 8080
  to:
    kind: Service
    name: test-app
    weight: 100
status:
  ingress:
  - conditions:
    - status: "True"
      type: Admitted
